feat(memory): 接入记忆索引并完善更新删除的目标校验
- 在回答生成后重新加载有效记忆索引，与本轮用户消息和最终回答一起交给提取模型
- 新增提取上下文与目标快照，通过 memoryRef 映射已有记忆，避免模型猜测数据库 ID 或业务 key
- 为候选增加 targetMemoryRefs 和 userEvidence，校验本轮用户原话依据、目标范围、归属及重复操作
- 支持一次更新或软删除多个同义记忆目标，更新时保留各目标原有 memoryKey
- 在事务内按固定顺序锁定目标并检查快照变化，发生校验或写入失败时回滚整批操作
- 将候选引用与范围错误接入有限次数修复流程，补充关键步骤注释和可观测日志
- 补充候选校验、Harness 集成、阿里云模型及 MySQL 事务测试用例